@@ -29,6 +29,7 @@ import java.io.IOException;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -113,18 +114,13 @@ public abstract class HttpRequest {
         return getStringAsync().thenApplyAsync(jsonString -> JsonUtils.fromNonNullJson(jsonString, type));
     }
 
-    public HttpRequest filter(ExceptionalBiConsumer<URL, Integer, IOException> responseCodeTester) {
-        this.responseCodeTester = responseCodeTester;
-        return this;
-    }
-
     public HttpRequest ignoreHttpErrorCode(int code) {
         toleratedHttpCodes.add(code);
         return this;
     }
 
     public HttpURLConnection createConnection() throws IOException {
-        HttpURLConnection con = createHttpConnection(new URL(url));
+        HttpURLConnection con = createHttpConnection(URI.create(url));
         con.setRequestMethod(method);
         for (Map.Entry<String, String> entry : headers.entrySet()) {
             con.setRequestProperty(entry.getKey(), entry.getValue());
@@ -133,7 +129,7 @@ public abstract class HttpRequest {
     }
 
     public static class HttpGetRequest extends HttpRequest {
-        public HttpGetRequest(String url) {
+        protected HttpGetRequest(String url) {
             super(url, "GET");
         }
 
@@ -149,7 +145,7 @@ public abstract class HttpRequest {
     public static final class HttpPostRequest extends HttpRequest {
         private byte[] bytes;
 
-        public HttpPostRequest(String url) {
+        private HttpPostRequest(String url) {
             super(url, "POST");
         }
 
@@ -189,21 +185,17 @@ public abstract class HttpRequest {
 
                 URL url = new URL(this.url);
 
-                if (responseCodeTester != null) {
-                    responseCodeTester.accept(url, con.getResponseCode());
-                } else {
-                    if (con.getResponseCode() / 100 != 2) {
-                        if (!ignoreHttpCode && !toleratedHttpCodes.contains(con.getResponseCode())) {
-                            try {
-                                throw new ResponseCodeException(url, con.getResponseCode(), NetworkUtils.readData(con));
-                            } catch (IOException e) {
-                                throw new ResponseCodeException(url, con.getResponseCode(), e);
-                            }
+                if (con.getResponseCode() / 100 != 2) {
+                    if (!ignoreHttpCode && !toleratedHttpCodes.contains(con.getResponseCode())) {
+                        try {
+                            throw new ResponseCodeException(NetworkUtils.toURI(url), con.getResponseCode(), NetworkUtils.readFullyAsString(con));
+                        } catch (IOException e) {
+                            throw new ResponseCodeException(NetworkUtils.toURI(url), con.getResponseCode(), e);
                         }
                     }
                 }
 
-                return NetworkUtils.readData(con);
+                return NetworkUtils.readFullyAsString(con);
             }, retryTimes);
         }
     }
